# LIGHT

./: .gitignore  README.md  install.sh  meson.build
.config/: conf.json
config/: repositories.json
include/: funcs.h
repository/: pkg_list.json  repo.json
src/: cliFuncs.cpp  main.cpp  meson.build  update.cpp
